--- a/comics.html
+++ b/comics.html
@@ -26,41 +26,46 @@
 <body>
 <div class="MyDivOthers">
 </div>
-	
+
 <div class="mydiv2">
   <h2>Enter a bizarre world of animated imagination.</h2>
 </div>
 
 <div id="navigation">
 <nav>
-  <p> <a href="index.html">Home</a> | <a href="about-me.html">About</a> <!--| <a href="blog.html">Blog</a>--> | <strong>Comics</strong> | <a href="contact.html">Contact</a></p>
+  <p> <a href="index.html">Home</a> | <a href="about-me.html">About</a> | <a href="blog.html">Blog</a> | <strong>Comics</strong> | <a href="contact.html">Contact</a></p>
 </nav>
 </div>
-
+<hr>
 <div class="question">
  <p>Do you have time to kill before you have to go off and do something important? Here you'll find endless content that'll 
   keep you here for hours, stories, comics, blogs, pictures, and other mundane things, some of it NSFW. Just click each image to enlarge.</p>
  </div>
 
 <div id="thumbnails">
-	
+<!--For some reason, the little pic goes in "img src" and the big pic goes in "a href"-->
+		<h3>#8: The Tightrope, part 2</h3>
+		<p>January 17th, 2017</p>
+		<a href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/Tightrope2.png">
+		<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/lil-Tightrope2.png" alt=""></a>
+		
 		<h3>#7: The Tightrope, part 1</h3>
 		<p>January 14th, 2017</p>
 		<a href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/Tightrope.jpg">
 		<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/little-Tightrope.png" alt="
 		The Main Character struggles to balance on a tightrope above what appears to be a bottomless pit and comforts 
 		herself by saying (Thank God for holiday pay, it turned this financial sinkhole into a financial tightrope.)"></a>
-	
+		
 		<h3>#6: Clash of the Titan Languages</h3>
 		<p>January 13th, 2016</p>
 		<a href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/titan-languages.png">
 		<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/titan-little-languages.png" alt="As
 		The Main Character is ordering her food, a waiter politely requests to get through the tiny space between the cash
-		register and the fish tank on the other side. (Excusez-moi. Je dois aller à la cuisine, s'il vous plaît.), The 
-		waiter says politely. The Main Character flatens herself against the counter and gasps, (Ah, lo siento!) The cashier
+		register and the fish tank on the other side. (Excusez-moi. Je dois aller à la cuisine, s'il vous plaît.) The 
+		waiter says politely. The Main Character flatens herself against the counter and gasps (Ah, lo siento!) The cashier
 		chuckles as she participates as a spectator.">
 		</a>
-	
+		
 		<h3>#5: The Expectation</h3>
 		<p>January 12th, 2017</p>
 		<a href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/the-expectation.png">
@@ -90,7 +95,8 @@ awesome!) The Main Character retorts, ((My dear?) How about (Rosie)?)"></a>
 https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/that-little-smile.png" alt="Side-by-side comparison 
 of two selfies. The first selfie depicts a gorgeous woman smiling. The caption underneath her pic says (How I THINK 
 I look when I smile...) And the caption underneath the second selfie of the same woman, this time she has more wrinkles, smile lines, and squinty eyes, 
-			says (How I REALLY look.)"></a>
+says (How I REALLY look.)">
+</a>
 		
 		<h3>#1: The Husband</h3> 
 		<p>December 27th, 2016</p>
