--- a/contact.html
+++ b/contact.html
@@ -9,17 +9,16 @@
 <body>
 <div class="MyDivOthers">
 </div>
-  
-  <div class="mydiv2">
+
+<div class="mydiv2">
   <h2>Wanna contact me for any work? Or see me in action? Just click the links below!</h2>
 </div>
-
 <div id="navigation">
 <nav>
-  <p> <a href="index.html">Home</a> | <a href="about-me.html">About</a> | <a href="comics.html">Comics</a> | <strong>Contact</strong></p>
+  <p> <a href="index.html">Home</a> | <a href="about-me.html">About</a> | <a href="blog.html"> Blog</a> | <a href="comics.html">Comics</a> | <strong>Contact</strong></p>
 </nav>
 </div>
-
+<hr>
 <div class="contact">
 <h2>Contact information</h2>
 <p>Email me at: <a href="mailto:admin@rosieilene.com" target="_blank">admin@rosieilene.com</a>.</p>
