--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 </div>
 
 <div class="mydiv2">
-  <h2>Wanna contact me for any work? Or see me in action? Just click the links below!</h2>
+  <h2>Wanna see me in action? Just click the links below!</h2>
 </div>
 <div id="navigation">
 <nav>
