--- a/pages/first-entry.html
+++ b/pages/first-entry.html
@@ -24,7 +24,7 @@
 
 		<div id="navigation">
 			<nav>
-				<p style=text-align:center> <a href="file:///C:/Users/RosieMA/Desktop/site/index.html">Home</a> | <a href="file:///C:/Users/RosieMA/Desktop/site/about-me.html">About</a> | <a href="file:///C:/Users/RosieMA/Desktop/site/blog.html">Blog</a> | <a href="file:///C:/Users/RosieMA/Desktop/site/comics.html">Comics</a> | <a href="file:///C:/Users/RosieMA/Desktop/site/contact.html">Contact</a></p>
+				<p style=text-align:center> <a href="index.html">Home</a> | <a href="about-me.html">About</a> | <a href="blog.html">Blog</a> | <a href="comics.html">Comics</a> | <a href="contact.html">Contact</a></p>
 			</nav>
 		</div>
 		<hr>
