--- a/pages/first-entry.html
+++ b/pages/first-entry.html
@@ -19,14 +19,14 @@
 		<div class="MyDivOthers">	
 		</div>
 		<div class="pageDiv">
-			<h2 style=text-align:center>Blog</h2>
+			<h1 style=text-align:center>Blog</h1>
 		</div>
 
-		<div id="navigation">
+		<!--<div id="navigation">
 			<nav>
-				<p style=text-align:center> <a href="rosie-ilene.github.io/index.html">Home</a> | <a href="about-me.html">About</a> | <a href="blog.html">Blog</a> | <a href="comics.html">Comics</a> | <a href="contact.html">Contact</a></p>
+				<p style=text-align:center> <a href="index.html">Home</a> | <a href="about-me.html">About</a> | <a href="blog.html">Blog</a> | <a href="comics.html">Comics</a> | <a href="contact.html">Contact</a></p>
 			</nav>
-		</div>
+		</div>-->
 		<hr>
 		
 		<div class="article">
