--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
 
 <div id="navigation">
 <nav>
- <p> <a href="index.html">Home</a> | <a href="about-me.html">About</a> | <Strong="blog.html">Blog</strong> | <a href="comics.html">Comics</a> | <a href="contact.html">Contact</a></p>
+ <p> <a href="index.html">Home</a> | <a href="about-me.html">About</a> | <strong>Blog</strong> | <a href="comics.html">Comics</a> | <a href="contact.html">Contact</a></p>
 </nav>
 </div>
 <hr>
@@ -47,7 +47,7 @@
 				<h3>Elegant cards drawn by hand.</h3>
 				<p>Hey, everyone! I just wanted to show off my very first blog post, something I have always wanted to do
 					but didn't know where to begin, until now. I thought to myself, "How could I make my first post this good?"
-					"What could I post to kick this website off with a bang?" How about...? <a href="pages/first-entry.html">Read more...</a>
+					"What could I post to kick this website off with a bang?" How about...? <a href="pages/first-entry.html" target="_blank">Read more...</a>
 </div>
 <hr>
 </body>
