add "next" element

--- a/pages/first-entry.html
+++ b/pages/first-entry.html
@@ -134,7 +134,7 @@
 			<style>
 			</style>
 		<p>Created by: Rosie Ilene</p>		
-		<!--<p style=text-align:right><a href="second-entry.html">Next</a></p>-->			
+		<p style=text-align:right><a href="second-entry.html">Next</a></p>			
 		</footer>
 		
 		</body>
