--- a/pages/first-entry.html
+++ b/pages/first-entry.html
@@ -22,11 +22,11 @@
 			<h1 style=text-align:center>Blog</h1>
 		</div>
 
-		<!--<div id="navigation">
+		<div id="navigation">
 			<nav>
-				<p style=text-align:center> <a href="index.html">Home</a> | <a href="about-me.html">About</a> | <a href="blog.html">Blog</a> | <a href="comics.html">Comics</a> | <a href="contact.html">Contact</a></p>
+				<p style=text-align:center> <a href="rosieilene.com/index.html">Home</a> | <a href="rosieilene.com/about-me.html">About</a> | <a href="rosieilene.com/blog.html">Blog</a> | <a href="rosieilene.com/comics.html">Comics</a> | <a href="rosieilene.com/contact.html">Contact</a></p>
 			</nav>
-		</div>-->
+		</div>
 		<hr>
 		
 		<div class="article">
@@ -133,6 +133,7 @@
 		<footer>
 			<style>
 			</style>
+			<hr>
 		<p>Created by: Rosie Ilene</p>		
 		<p style=text-align:right><a href="second-entry.html">Next</a></p>			
 		</footer>
