--- a/pages/second-entry.html
+++ b/pages/second-entry.html
@@ -12,8 +12,11 @@
 			h1, h2, h3, p, b, i {font-family:verdana}
 			a:link {text-decoration:none}
 		</style>
+		<div class="MyDivOthers">
+		</div>
+		
 		<div class="pageDiv">
-			<h2 style=text-align:center>Blog</h2>
+			<h1 style=text-align:center>Blog</h1>
 		</div>
 
 		<div id="navigation">
@@ -62,6 +65,8 @@
 			<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/orange-words-2017.jpg" width="640px" height="500px" 
 			alt="Orange Words"></a>
 		</div>
+		<br>
+		<hr>
 	</body>
 
 	<footer>
