--- a/pages/second-entry.html
+++ b/pages/second-entry.html
@@ -19,11 +19,11 @@
 			<h1 style=text-align:center>Blog</h1>
 		</div>
 
-		<div id="navigation">
+		<!--<div id="navigation">
 			<nav>
 				<p style=text-align:center> <a href="index.html">Home</a> | <a href="about-me.html">About</a> | <a href="blog.html">Blog</a> | <a href="comics.html">Comics</a> | <a href="contact.html">Contact</a></p>
 			</nav>
-		</div>
+		</div>-->
 		<hr>
 		<div class="article">
 			<h2>My Message for 2017: Listen to Bernie Sanders.</h2>
