--- a/pages/second-entry.html
+++ b/pages/second-entry.html
@@ -2,7 +2,7 @@
 	<html>
 		<head>
 		<title>My message for 2017 - Blog | Rosie Ilene</title>
-			<link type="text/css" rel="stylesheet" href="pages/pages.css"/>
+			<link type="text/css" rel="stylesheet" href="stylesheets/main.css"/>
 			<link rel="icon" href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/82418.png" type="image/png">
 		</head>
 	
