--- a/blog.html
+++ b/blog.html
@@ -28,23 +28,28 @@
 				<p>Started January 16th, 2017
 					<br>
 					Posted January __th, 2017</p>
-</div>
+</div>-->
+	
 <div class="blogEntry">
 <h2><a href="pages/second-entry.html" target="_blank">My Message for 2017</a></h2>
-	<div class="titleImage2">
-		</div>
-			<h3>Protect each other. Keep each other safe.</h3>
-				<p>Started January 12th, 2017
-					<br>
-					Posted January __th, 2017</p>
-</div>-->
+	<h3>Protect each other. Keep each other safe.</h3>
+		<p>Started January 20th, 2017</p>
+			<div class="titleImage2">
+				<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/Indian-christmas-card.jpg" width="300px" height="200px" 
+							alt="Indian Christmas card">
+			</div>
+	<p>Today is the day we take a stand against harmful and willfully ignorant...<a href="pages/second-entry.html">Read more...</a></p>
+</div>
+	<hr>
+	
 <div class="blogEntry">
 	<h2><a href="pages/first-entry.html" target="_blank">First Entry</a></h2>
-					<p>December 30th, 2016</p>
-		<div class="titleImage">
-		<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/my-first-card.jpg" height="200px" width="300px">
-			</div>
-				<h3>Elegant cards drawn by hand.</h3>
+		<h3>Elegant cards drawn by hand.</h3>
+			<p>December 30th, 2016</p>
+				<div class="titleImage">
+					<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/my-first-card.jpg" height="200px" width="300px">
+				</div>
+				
 				<p>Hey, everyone! I just wanted to show off my very first blog post, something I have always wanted to do
 					but didn't know where to begin, until now. I thought to myself, "How could I make my first post this good?"
 					"What could I post to kick this website off with a bang?" How about...? <a href="pages/first-entry.html" target="_blank">Read more...</a>
