--- a/blog.html
+++ b/blog.html
@@ -16,7 +16,7 @@
 
 <div id="navigation">
 <nav>
- <p> <a href="index.html">Home</a> | <a href="about-me.html">About</a> | <strong>Blog</strong> | <a href="comics.html">Comics</a> | <a href="contact.html">Contact</a></p>
+ <p> <a href="index.html">Home</a> | <a href="about-me.html">About</a> | <strong>Blog</strong> | <a href="contact.html">Contact</a></p>
 </nav>
 </div>
 <hr>
