remove comics.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <div id="navigation">
 <nav>
-  <p> <strong>Home</strong> | <a href="about-me.html">About</a> | <a href="blog.html">Blog</a> | <a href="comics.html">Comics</a> | <a href="contact.html">Contact</a></p>
+  <p> <strong>Home</strong> | <a href="about-me.html">About</a> | <a href="blog.html">Blog</a> | <a href="contact.html">Contact</a></p>
 </nav>
 </div>
 </body>  
