--- a/blog.html
+++ b/blog.html
@@ -20,16 +20,18 @@
 </nav>
 </div>
 <hr>
-<!--<div class="blogEntry">
-<h2><a href="pages/third-entry.html" target="_blank">The Inauguration is this Friday...</a></h2>
-	<div class="titleImage2">
+<div class="blogEntry">
+<h2><a href="pages/third-entry.html" target="_blank">I Removed the "Comics" Tab...</a></h2>
+	<h3>And placed malicealicemartin.com under construction.</h3>
+				<p>March 6th, 2017</p>
+	<div class="titleImage3">
+		<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/comics/I3_P1_blog_pic.jpg" height="200px" width="300px">
 		</div>
-			<h3>We gotta listen to Bernie Sanders.</h3>
-				<p>Started January 16th, 2017
-					<br>
-					Posted January __th, 2017</p>
-</div>-->
-	
+			<p>If you've been with me since the days my comics were about <a href="https://www.instagram.com/malicemartin13" target="_blank">two weirdly-drawn clowns/pierrot dolls</a>, you might already be familiar with 
+			<a href="http://www.malicealicemartin.com" target="_blank">malicealicemartin.com.</a> If you're new, I'd like to welcome you to... <a href="pages/third-entry.html" target="_blank">Read more...</a></p>
+</div>
+<hr>
+<br>
 <div class="blogEntry">
 <h2><a href="pages/second-entry.html" target="_blank">My Message for 2017</a></h2>
 	<h3>Protect each other. Keep each other safe.</h3>
@@ -41,7 +43,7 @@
 	<p>Today is the day we take a stand against harmful and willfully ignorant...<a href="pages/second-entry.html">Read more...</a></p>
 </div>
 	<hr>
-	
+	<br>
 <div class="blogEntry">
 	<h2><a href="pages/first-entry.html" target="_blank">First Entry</a></h2>
 		<h3>Elegant cards drawn by hand.</h3>
