--- a/pages/second-entry.html
+++ b/pages/second-entry.html
@@ -71,6 +71,6 @@
 
 	<footer>
 		<p>Created by: Rosie Ilene</p>		
-		<p style=text-align:left><a href="first-entry.html">Previous</a> <!--<p style=text-align:right><a href="third-entry.html">Next</a></p>-->
+		<p style=text-align:left><a href="first-entry.html">Previous</a> <p style=text-align:right><a href="third-entry.html">Next</a></p>
 	</footer>
 </html>
