--- a/pages/third-entry.html
+++ b/pages/third-entry.html
@@ -2,7 +2,7 @@
 	<html>
 		<head>
 			<title>- Blog | Rosie Ilene</title>
-			<link type="text/css" rel="stylesheet" href="pages/pages.css"/>
+			<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
 			<link rel="icon" href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/82418.png" type="image/png">
 		</head>
 		
@@ -13,7 +13,6 @@
 				a:link {text-decoration:none}
 			</style>
 		<div class="MyDivOthers">
-			
 		</div>
 		<div class="pageDiv">
 			<h1 style=text-align:center>Blog</h1>
