change CSS location

--- a/pages/third-entry.html
+++ b/pages/third-entry.html
@@ -2,7 +2,7 @@
 	<html>
 		<head>
 			<title>- Blog | Rosie Ilene</title>
-			<link type="text/css" rel="stylesheet" href="stylesheet.css"/>
+			<link type="text/css" rel="stylesheet" href="stylesheet/main.css"/>
 			<link rel="icon" href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/82418.png" type="image/png">
 		</head>
 		
