--- a/index.html
+++ b/index.html
@@ -7,21 +7,22 @@
 </head>
 
 <body>
-<div class="MyDiv">
-  <h1>Welcome to rosieilene.com</h1>
-</div>
+	<div class="MyDiv">
+		<h1>Welcome to rosieilene.com</h1>
+	</div>
 
-<div class="mydiv2">
-  <h2>It's so boring, it's exciting!</h2>
-</div>
+	<div class="mydiv2">
+		<h2>It's so boring, it's exciting!</h2>
+	</div>
 
-<div id="navigation">
-<nav>
-  <p> <strong>Home</strong> | <a href="about-me.html">About</a> | <a href="blog.html">Blog</a> | <a href="contact.html">Contact</a></p>
-</nav>
-</div>
+	<div id="navigation">
+		<nav>
+			<p> <strong>Home</strong> | <a href="about-me.html">About</a> | <a href="blog.html">Blog</a> <!--| <a href="comics.html">Comics</a>--> | <a href="contact.html">Contact</a></p>
+		</nav>
+		<br>
+	</div>
 </body>  
-<hr>
+<hr style="padding: 0px 75px 0px 75px">
   <div id= "footer">
  <footer>
   <p>Posted by: Rosie</p>
