--- a/about-me.html
+++ b/about-me.html
@@ -16,87 +16,100 @@
 
 <div id="navigation">
 <nav>
-  <p> <a href="index.html">Home</a> | <strong>About</strong> | <a href="blog.html">Blog</a> | <a href="contact.html">Contact</a></p>
+  <p> <a href="index.html">Home</a> | <strong>About</strong> | <a href="blog.html">Blog</a> <!--| <a href="comics.html">Comics</a>--> | <a href="contact.html">Contact</a></p>
 </nav>
 </div>
 <hr>
+	<div class="line">
+		<h2>Intimate Information</h2>
+	</div>
   <div class="stats">
-   <h2>Intimate Information</h2>
-   <img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/Profile-picture.jpg" alt="Profile Picture" width="720px" height="500px">
-   <h4>Origin: United States</h4>
-   <h4>Hair color: Brown</h4>
-   <h4>Eye color: Dark brown, sometimes they look black</h4>
-   <h4>Height: 165cm (5' 5")</h4>
-   <h4>Zodiac sign: Libra</h4>
-   <h4>Languages:</h4> 
-<ul>
-<li><strong>English</strong>:Fluent/mother tongue.</li>
-</ul>
-<ul>
-<li><strong>Spanish</strong>:Intermediate, strong understanding pero despacio, por favor.</li>
-</ul>
-<ul>
-	<li><strong>HTML/CSS</strong>: Strong understanding</li>
-</ul>
-<h2>Do you mind telling the world about yourself?</h2>
-<p>Gladly. I will let you know that I am a very welcoming and artistic person, though far from being a pushover, which comes 
-  to a surprise for a lot of people as I present myself to very calm. Former clients have described me as level-headed and 
-  highly supportive, even during stressful situations. Since clutter makes me feel lost and nervous, I have a habit of breaking 
-  this question down even further to answer with more ease. I usually engage with...</p>
-<h3>"What would you like to know?"</h3>
+  <img style="float:left; padding: 0px 30px 0px 0px" src="https://s3.amazonaws.com/aws-website-rosieilenecom-mcsz3/new_profile_pic.jpg" height="550px" width="450px">
+			<h3>Rosie Ilene
+			<br>
+			aka Rosie Alice Martin</h3>
+				<h4>Origin: United States</h4>
+				<h4>Hair color: Brown</h4>
+				<h4>Eye color: Dark brown, sometimes they look black</h4>
+				<h4>Height: 165cm (5' 5")</h4>
+				<h4>Zodiac sign: Libra</h4>
+				<h4>Languages:</h4> 
+					<ul>
+						<li><strong>English</strong>:Fluent/mother tongue.</li>
+					</ul>
+					<ul>
+						<li><strong>Spanish</strong>:Intermediate, puedo entenderte pero despacio, por favor.</li>
+					</ul>
+					<ul>
+						<li>Currently studying <strong>German</strong> and <strong>French.</strong></li>
+					</ul>
+					<ul>
+						<li><strong>HTML/CSS</strong>: Strong understanding</li>
+					</ul>
+	</div>
+	
+	<div class="about">
+		<h2>Do you mind telling the world about yourself?</h2>
+			<p>Gladly. I will let you know that I am a very welcoming and artistic person, though far from being a pushover, which comes 
+			to a surprise for a lot of people as I present myself to very calm. Former clients have described me as level-headed and 
+			highly supportive, even during stressful situations. Since clutter makes me feel lost and nervous, I have a habit of breaking 
+			this question down even further to answer with more ease. I usually engage with...</p>
+			<br>
+				<h3>"What would you like to know?"</h3>
    
-<h3>About coding</h3>
-<p>I absolutely love it! Starting in July 2015, I taught myself the basics of building a website using <abbr title="Hyper Text Markup Language">HTML</abbr>/<abbr= title="Cascading Style Sheets">CSS</abbr>, proofreading 
-my work on Notepad++ and the local host, and then launching it independently on Github and utilizing the command line. My sources
-for self-education are Codecademy, TechnicalCafe, Github, and w3schools. My ambition for learning more computer languages such
-as Python, RubyGems, <abbr title="Hypertext Preprocessor">PHP</abbr>, JavaScript, and <abbr title="Structured Query Language">SQL</abbr> is still ongoing as I have already begun familiarizing myself with PHP, a language
-used in making Facebook!</p>
+		<h3>About coding</h3>
+			<p>I absolutely love it! Starting in July 2015, I taught myself the basics of building a website using <abbr title="Hyper Text Markup Language">HTML</abbr>/<abbr= title="Cascading Style Sheets">CSS</abbr>, proofreading 
+			my work on Notepad++ and the local host, and then launching it independently on Github and utilizing the command line. My sources
+			for self-education are Codecademy, TechnicalCafe, Github, and w3schools. My ambition for learning more computer languages such
+			as Python, RubyGems, <abbr title="Hypertext Preprocessor">PHP</abbr>, JavaScript, and <abbr title="Structured Query Language">SQL</abbr> is still ongoing as I have already begun familiarizing myself with PHP, a language
+			used in making Facebook!</p>
 
-<h3>About Art</h3>
-<p>The only institutional training I received was from one semester of art class in high school. The rest of my skills were formed 
-after watching my father show my siblings and I some sketches he did of comic book characters, which turned into all of us, my dad
-included, drawing on sheets of lined notebook paper. I saw the lines he drew turn into realistic-looking fingers, arms, legs, a head, 
-and eventually a sketch of a man posed dynamically, as seen on superheroes. His drawings were so beautiful and life-like, it was the 
-prettiest thing 5-year-old me had ever seen. From there on, I wanted to draw, too. It's a nice escape when life gets too overwhelming 
-and stressful. Art is my life and I'm incredibly grateful for ability and willpower to draw. I wasn't born knowing how to draw, but 
-I got there with a lifetime of practice done during my free time, continuously perfecting the skill I'm looking for, which is, to 
-this day, comic book style. A combination of the art styles found in Naruto and El Eternauta. </p>
+		<h3>About Art</h3>
+			<p>The only institutional training I received was from one semester of art class in high school. The rest of my skills were formed 
+			after watching my father show my siblings and I some sketches he did of comic book characters, which turned into all of us, my dad
+			included, drawing on sheets of lined notebook paper. I saw the lines he drew turn into realistic-looking fingers, arms, legs, a head, 
+			and eventually a sketch of a man posed dynamically, as seen on superheroes. His drawings were so beautiful and life-like, it was the 
+			prettiest thing 5-year-old me had ever seen. From there on, I wanted to draw, too. It's a nice escape when life gets too overwhelming 
+			and stressful. Art is my life and I'm incredibly grateful for ability and willpower to draw. I wasn't born knowing how to draw, but 
+			I got there with a lifetime of practice done during my free time, continuously perfecting the skill I'm looking for, which is, to 
+			this day, comic book style. A combination of the art styles found in Naruto and El Eternauta. </p>
+	
+		<h3>About Practical Skills</h3>
+			<p>I genuinely enjoy guiding people through instructions and helping them find the right path if they are ever lost or have trouble
+			understanding something. Even if we don't speak the same language. I also like being in the spotlight, on stage, both metaphorically 
+			and literally, speaking in front of people and putting my best foot forward, despite also being an introvert. Is there anyone who is 
+			conspicuous enough to stand out when someone walks through the door asking for help? The one who sees them, walks around the corner
+			of her desk to approach the curious asker? That person is usually me. Sometimes, it's a curse but it's who I am and I own it. Just 
+			like I own the fact that I love learning new languages and have the enthusiastic curve to keep going, whether human or computer. As
+			long as we're alive, there's never a chance to stop learning and improving.</p>
+	</div>
 
-<h3>About Practical Skills</h3>
-<p>I genuinely enjoy guiding people through instructions and helping them find the right path if they are ever lost or have trouble
-understanding something. Even if we don't speak the same language. I also like being in the spotlight, on stage, both metaphorically 
-and literally, speaking in front of people and putting my best foot forward, despite also being an introvert. Is there anyone who is 
-conspicuous enough to stand out when someone walks through the door asking for help? The one who sees them, walks around the corner
-of her desk to approach the curious asker? That person is usually me. Sometimes, it's a curse but it's who I am and I own it. Just 
-like I own the fact that I love learning new languages and have the enthusiastic curve to keep going, whether human or computer. As
-long as we're alive, there's never a chance to stop learning and improving.</p>
-</div>
-<div class="intro">
-<h3>Places I've been</h3>
-   <ul>
-   <li><b>In the United States:</b> Texas, Arkansas, Oklahoma, Louisiana, Georgia, South Carolina, Florida, New Jersey, New Mexico,
-     and Missouri.</li>
-   <li><b>Across the world:</b> Shannon Airport, Ireland, Leipzig, Germany, Kuwait, Al Fallujah, Tallil (Imam Ali) AFB, Nasrah, Nasiriyah, 
-     and Baghdad, Iraq.</li>
-	 </ul>
-   <h3>Places I would <i>like</i> to go</h3>
-    <p>Back to Germany, this time longer than 8 hours, Iraq, too. Mexico, Japan, Iceland, Hungary, and Alaska with a trusted group of friends.</p>
-   <h3>Favorite cuisines</h3>
-    <p>The food of my culture, MEXICAN!!! Central/South American dishes are also amazing. The same goes for Thai, Indian, Chinese, 
-      Japanese, and I wouldn't say no to trying new dishes, unless it has meat like beef and pork.</p>
-   <h3> Favorite foods</h3>
-   <p>Fruit, especially fruit cups doused in lime juice and <a href="https://en.wikipedia.org/wiki/Taj%C3%ADn_(seasoning)" target="_blank">tajin</a>, coconut paletas, the list will be shorter if I listed all
-     the foods I <i>don't</i> like.</p>
-   <h3> Least favorite foods</h3>
-    <p>Caramel, pork (yes, even bacon. I'm a monster, I know), most salad dressings except raspberry vinegrette, green apples, vodka,
-      tequila, American cheese, bland food, cow's milk.</p>
- </div>
+	<div class="intro">
+		<h3>Places I've been</h3>
+			<ul>
+				<li><b>In the United States:</b> Texas, Arkansas, Oklahoma, Louisiana, Georgia, South Carolina, Florida, New Jersey, New Mexico,
+				and Missouri.</li>
+				<li><b>Across the world:</b> Shannon Airport, Ireland, Leipzig, Germany, Kuwait, Al Fallujah, Tallil (Imam Ali) AFB, Nasrah, Nasiriyah, 
+				and Baghdad, Iraq.</li>
+			</ul>
+		<h3>Places I would <i>like</i> to go</h3>
+				<p>Back to Germany, this time longer than 8 hours, Iraq, too. Mexico, Japan, Iceland, Hungary, and Alaska with a trusted group of friends.</p>
+		<h3>Favorite cuisines</h3>
+				<p>The food of my culture, MEXICAN!!! Central/South American dishes are also amazing. The same goes for Thai, Indian, Chinese, 
+				Japanese, and I wouldn't say no to trying new dishes, unless it has meat like beef and pork.</p>
+		<h3> Favorite foods</h3>
+				<p>Fruit, especially fruit cups doused in lime juice and <a href="https://en.wikipedia.org/wiki/Taj%C3%ADn_(seasoning)" target="_blank">tajin</a>, coconut paletas, the list will be shorter if I listed all
+				the foods I <i>don't</i> like.</p>
+		<h3> Least favorite foods</h3>
+				<p>Caramel, pork (yes, even bacon. I'm a monster, I know), most salad dressings except raspberry vinegrette, green apples, vodka,
+				tequila, American cheese, bland food, cow's milk.</p>
+	</div>
 </body>
 
 <div class="footer2">
  <footer>
- <h2>Thank you for reading! Check out some of my social media pages over in the <a href="contact.html">Contacts</a>.</h2>
-<p><a href="index.html">Back to home page</a></p>
+	<h2>Thank you for reading! Check out some of my social media pages over in the <a href="contact.html">Contacts</a>.</h2>
+	<p><a href="index.html">Back to home page</a></p>
 </footer>
 </div>
 </html>
