--- a/contact.html
+++ b/contact.html
@@ -7,30 +7,32 @@
 </head>
 
 <body>
-<div class="MyDivOthers">
-</div>
+	<div class="MyDivOthers">
+	</div>
 
-<div class="mydiv2">
-  <h2>Wanna see me in action? Just click the links below!</h2>
-</div>
-<div id="navigation">
-<nav>
-  <p> <a href="index.html">Home</a> | <a href="about-me.html">About</a> | <a href="blog.html">Blog</a> | <strong>Contact</strong></p>
-</nav>
-</div>
+	<div class="mydiv2">
+		<h2>Wanna contact me for any work? Or see me in action? Just click the links below!</h2>
+	</div>
+	
+	<div id="navigation">
+		<nav>
+			<p> <a href="index.html">Home</a> | <a href="about-me.html">About</a> | <a href="blog.html"> Blog</a> <!--| <a href="comics.html">Comics</a>--> | <strong>Contact</strong></p>
+		</nav>
+		<br>
+	</div>
 <hr>
-<div class="contact">
-<h2>Contact information</h2>
-<p>Email me at: <a href="mailto:admin@rosieilene.com" target="_blank">admin@rosieilene.com</a>.</p>
-<h2>Social Media</h2> 
-<p><a href="https://www.instagram.com/rosieilene/" target="_blank">Instagram</a></p>
-<p><a href="https://twitter.com/ilene_rosie" target="_blank">Twitter</a></p>
-</div>
+	<div class="contact">
+		<h2>Contact information</h2>
+			<p>Email me at: <a href="mailto:admin@rosieilene.com" target="_blank">admin@rosieilene.com</a>.</p>
+				<h2>Social Media</h2> 
+					<p><a href="https://www.instagram.com/rosie_alice_martin/" target="_blank">Instagram</a></p>
+					<p><a href="https://twitter.com/ilene_rosie" target="_blank">Twitter</a></p>
+	</div>
 
-<div class="footer5">
-<footer>
-</footer>
-</div>
+	<div class="footer5">
+		<footer>
+		</footer>
+	</div>
 
 </body>
 </html>
