--- a/pages/first-entry.html
+++ b/pages/first-entry.html
@@ -16,20 +16,16 @@
 					a:link {text-decoration:none}
 				table, tr, th {padding:3px;}
 			</style>
-		<div class="MyDivOthers">	
+		<div class="MyDivOthers">
+			
 		</div>
 		<div class="pageDiv">
 			<h1 style=text-align:center>Blog</h1>
+			<hr>
 		</div>
 
-		<!--<div id="navigation">
-			<nav>
-				<p style=text-align:center> <a href="rosieilene.com/index.html">Home</a> | <a href="rosieilene.com/about-me.html">About</a> | <a href="rosieilene.com/blog.html">Blog</a> | <a href="rosieilene.com/comics.html">Comics</a> | <a href="rosieilene.com/contact.html">Contact</a></p>
-			</nav>
-		</div>-->
-		<hr>
 		
-		<div class="article">
+		<div style="padding: 0px 75px 0px 75px" class="article">
 			<h2 style=color:indigo>First Entry</h2>
 			<h3>Elegant Cards Drawn by Hand</h3>
 					<p>Posted December 30th, 2016</p>
@@ -129,14 +125,13 @@
 			</div>
 				
 		</div>
-		
-		<footer>
-			<style>
-			</style>
-			<hr>
-		<p>Created by: Rosie Ilene</p>		
-		<p style=text-align:right><a href="second-entry.html">Next</a></p>			
-		</footer>
+		<hr>
+		<div style="padding: 0px 75px 15px 75px">
+			<footer>
+				<p>Created by: Rosie Ilene</p>		
+				<p style=text-align:right><a href="second-entry.html">Next</a></p>		
+			</footer>
+		</div>
 		
 		</body>
 	</html>
