--- a/pages/second-entry.html
+++ b/pages/second-entry.html
@@ -13,19 +13,14 @@
 			a:link {text-decoration:none}
 		</style>
 		<div class="MyDivOthers">
+			
 		</div>
-		
 		<div class="pageDiv">
 			<h1 style=text-align:center>Blog</h1>
 		</div>
 
-		<!--<div id="navigation">
-			<nav>
-				<p style=text-align:center> <a href="index.html">Home</a> | <a href="about-me.html">About</a> | <a href="blog.html">Blog</a> | <a href="comics.html">Comics</a> | <a href="contact.html">Contact</a></p>
-			</nav>
-		</div>-->
 		<hr>
-		<div class="article">
+		<div style="padding: 15px 75px 0px 75px" class="article">
 			<h2>My Message for 2017: Listen to Bernie Sanders.</h2>
 			<h3>Protect each other. Keep each other safe.</h3>
 				<p>January 20th, 2017</p>
@@ -65,12 +60,12 @@
 			<img src="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/orange-words-2017.jpg" width="640px" height="500px" 
 			alt="Orange Words"></a>
 		</div>
-		<br>
-		<hr>
 	</body>
-
-	<footer>
-		<p>Created by: Rosie Ilene</p>		
-		<p style=text-align:left><a href="first-entry.html">Previous</a> <p style=text-align:right><a href="third-entry.html">Next</a></p>
-	</footer>
+<hr>
+	<div style="padding: 0px 75px 15px 75px">
+		<footer>
+			<p>Created by: Rosie Ilene</p>		
+			<p style=text-align:left><a href="first-entry.html">Previous</a> <p style=text-align:right><a href="third-entry.html">Next</a>
+		</footer>
+	</div>
 </html>
