--- a/pages/fourth-entry.html
+++ b/pages/fourth-entry.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+			<title>- I Removed the "Comics" Tab... - Blog | Rosie Ilene</title>
+			<link type="text/css" rel="stylesheet" href="/stylesheets/main.css"/>
+			<link rel="icon" href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/82418.png" type="image/png">
+		</head>
+  
+  <body>
+    <h1 style="font-size:96px; text-align:center">Soon.</h1>
+    <h2 style="text-align:center> Available Monday, March 27th, 2017</h2>
+  </body>
+               </html>
