--- a/pages/fourth-entry.html
+++ b/pages/fourth-entry.html
@@ -8,6 +8,6 @@
   
   <body>
     <h1 style="font-size:96px; text-align:center">Soon.</h1>
-    <h2 style="text-align:center> Available Monday, March 27th, 2017</h2>
+    <h2 style="text-align:center"> Available Monday, March 27th, 2017</h2>
   </body>
                </html>
