--- a/pages/fourth-entry.html
+++ b/pages/fourth-entry.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-			<title>- I Removed the "Comics" Tab... - Blog | Rosie Ilene</title>
+			<title>I've Marketed Myself As a Strange Storyteller... - Blog | Rosie Ilene</title>
 			<link type="text/css" rel="stylesheet" href="/stylesheets/main.css"/>
 			<link rel="icon" href="https://s3.amazonaws.com/aws-website-rosieilenecom-820ui/images/82418.png" type="image/png">
 		</head>
